--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: rgb(201, 201, 201);
+    background: rgb(255, 255, 255);
     position: relative;
 }
 
@@ -39,13 +39,14 @@ body {
     width: 100%;
     display: flex;
     align-items: center;
-    background-color: #000;
-    color: #fff;
+    color: #000000;
     padding: 0 1rem;
     position: sticky;
     top: 0;
     left: 0;
     height: 3rem;
+    font-family: "Montserrat", serif;
+    background-color: white;
 }
 .club-title-list {
     width: 50%;
@@ -59,7 +60,6 @@ body {
 
 .club-title {
     position: relative;
-    padding-bottom: 0.3rem;
     cursor: pointer;
 }
 .club-title::after {
@@ -109,10 +109,12 @@ body {
 /* MAIN STYLE  */
 
 .club-name {
-    font-size: 26px;
+    font-size: 2rem;
     text-transform: uppercase;
-    margin: 1rem;
-    border-bottom: 1px solid #000;
+    margin-left: 2rem;
+    margin-top: 1rem;
+    font-weight: bolder;
+    font-family: "Quicksand", serif;
 }
 
 .club-hero {
@@ -120,6 +122,7 @@ body {
     grid-template-columns: 70% 1fr;
     gap: 1rem;
     margin: 2rem 2rem;
+    margin-bottom: 1rem;
 }
 
 .club-hero .club-img {
@@ -127,6 +130,7 @@ body {
     height: 100%;
     object-fit: cover;
     border-radius: 10px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 
@@ -137,46 +141,86 @@ body {
     flex-direction: column;
     align-items: center;
     font-size: 18px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 .club-hero .club-info .info-title {
     display: inline;
-    border-bottom: 1px solid #000;
     margin-top: 1rem;
+    font-size: 2rem;
+    font-weight: 700;
+    margin-bottom: 0;
+    font-family: "Quicksand", serif;
+    margin-left: 1.5rem;
+    margin-right: auto;
 }
+#infosub {
+    font-size: 1rem;
+    font-weight: 200;
+    margin-top: 0;
+    font-family: "Quicksand", serif;
+    margin-left: 1.5rem;
+    margin-right: auto;
+    margin-bottom: 1rem;
+}
+
 .club-hero .club-info .info-wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 90%;
 }
+.club-info {
+    justify-content: space-between;
+}
+
+
+
 .info-subtitle {
-    margin-top: 0.7rem;
+    font-size: 0.9rem;
+    margin-bottom: 1rem;
 }
 .club-hero .club-info .member-grid {
     width: 100%;
     display: grid;
     grid-template-columns: repeat(3, 20%);
     justify-content: space-between;
+    padding: 1rem;
 }
 
-
-.club-hero .club-info .member-grid .member-count {
-    font-size: 20px;
-    font-weight: 800;
+.member-count {
+    font-size: 2rem;
+    font-weight: 500;
 }
+.grade-name {
+    font-size: 0.8rem;
+}
+
 
 .manager, .captain {
     display: flex;
     justify-content: space-between;
-    background: rgb(207, 207, 207);
+    background: rgba(0, 0, 0, 0);
     padding: 0.5rem;
+    border-radius: 8px;
+    margin-bottom: 1rem;
+    font-family: "Montserrat", serif;
+    margin-top: auto;
 }
 .manager-info, .captain-info {
     display: flex;
-    width: 40%;
+    width: 30%;
     height: 100%;
     align-items: center;
     justify-content: space-between;
+}
+
+#info {
+    margin: auto;
+    margin-left: 1rem;
+}
+.manager-name, .captain-name{
+    font-size: 1rem;
+    font-weight: 700;
 }
 
 .manager-img, .captain-img {
@@ -184,34 +228,42 @@ body {
     aspect-ratio: 1;
     border-radius: 50%;
     object-fit: cover;
-    margin-right: 1rem;
+    margin-right: 0rem;
 }
 
 .manager button, .captain button {
     margin: auto 0;
-    background: none;
-    padding: 0.2rem 0.8rem;
+    background-color: white;
+    padding: 0.3rem 0.9rem;
     border-radius: 16px;
     cursor: pointer;
     transition: 0.3s ease;
+    margin-left: -3px;
 }
 .manager button:hover, .captain button:hover {
-    background:rgb(150, 150, 150);
+    background:rgb(0, 0, 0);
+    color: white;
 }
 
 
 .club-info .request-btn {
     font-size: 20px;
-    margin: auto 0;
-    padding: 0.2rem 5rem;
+    margin: 1rem 0rem;
+    padding: 0.5rem 4rem;
     background: #000;
     color: #fff;
     border: 2px solid #000;
-    border-radius: 20px;
+    border-radius: 25px;
     cursor: pointer;
     transition  : 0.3s ease;
+    font-weight: bold;
+    font-family: "Montserrat", serif;
 }
-
+.request-btn p{
+    font-size: 0.8rem;
+    font-weight: 200;
+    margin: 3px;
+}
 .request-btn:hover {
     background: #fff;
     color: #000;
@@ -225,10 +277,10 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-radius: 20px;
-    padding: 1rem;
-    width: 50%;
-    margin: 0 auto;
+    border-radius: 10px;
+    padding: 1.5rem;
+    margin: 0 2rem;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 .description {
     display: flex;
