--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: rgb(255, 255, 255);
+    background: rgb(255,255,255);
+    background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(255,247,247,1) 51%, rgba(214,233,255,1) 100%);
     position: relative;
 }
 
@@ -46,7 +47,8 @@ body {
     left: 0;
     height: 3rem;
     font-family: "Montserrat", serif;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.247);
+    backdrop-filter: blur(10px);
 }
 .club-title-list {
     width: 50%;
@@ -110,7 +112,6 @@ body {
 
 .club-name {
     font-size: 2rem;
-    text-transform: uppercase;
     margin-left: 2rem;
     margin-top: 1rem;
     font-weight: bolder;
@@ -183,8 +184,9 @@ body {
     width: 100%;
     display: grid;
     grid-template-columns: repeat(3, 20%);
-    justify-content: space-between;
+    justify-content: space-around;
     padding: 1rem;
+    font-family: "Montserrat", serif;
 }
 
 .member-count {
@@ -286,6 +288,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: "Montserrat", serif;
 }
 
 
@@ -296,7 +299,6 @@ body {
     grid-template-columns: repeat(4, 1fr);
     gap: 2rem;
 }
-
 
 
 
