--- a/styles.css
+++ b/styles.css
@@ -159,7 +159,7 @@ body {
     font-weight: 200;
     margin-top: 0;
     font-family: "Quicksand", serif;
-    margin-left: 1.5rem;
+    margin-left: 1rem;
     margin-right: auto;
     margin-bottom: 1rem;
 }
@@ -203,7 +203,6 @@ body {
     justify-content: space-between;
     background: rgba(0, 0, 0, 0);
     padding: 0.5rem;
-    border-radius: 8px;
     margin-bottom: 1rem;
     font-family: "Montserrat", serif;
     margin-top: auto;
@@ -251,7 +250,7 @@ body {
 .club-info .request-btn {
     font-size: 20px;
     margin: 1rem 0rem;
-    padding: 0.5rem 4rem;
+    padding: 0.5rem 15%;
     background: #000;
     color: #fff;
     border: 2px solid #000;
