--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 * {
@@ -69,9 +70,9 @@ body {
     position: absolute;
     bottom: 0;
     left: 100%;
-    height: 2px;
+    height: 1px;
     width: 0;
-    background: #fff;
+    background: #000000;
     transition: 0.3s ease-in-out;
 }
 .club-title:hover::after {
@@ -247,7 +248,7 @@ body {
 }
 
 
-.club-info .request-btn {
+.request-btn {
     font-size: 20px;
     margin: 1rem 0rem;
     padding: 0.5rem 15%;
@@ -260,6 +261,25 @@ body {
     font-weight: bold;
     font-family: "Montserrat", serif;
 }
+
+
+.request-btn2 {
+    font-size: 20px;
+    padding: 0rem 15%;
+    background: #000;
+    color: #fff;
+    border: 2px solid #000;
+    border-radius: 25px;
+    cursor: pointer;
+    transition  : 0.3s ease;
+    font-family: "Montserrat", serif;
+}
+.request-btn2:hover {
+    background: #fff;
+    color: #000;
+}
+
+
 .request-btn p{
     font-size: 0.8rem;
     font-weight: 200;
@@ -291,13 +311,49 @@ body {
 }
 
 
-.related-club {
+/* Related club  */
+.related-club-wrapper {
+    margin: 2rem auto;
     display: grid;
     width: 90%;
-    
-    grid-template-columns: repeat(4, 1fr);
-    gap: 2rem;
+    height: 8vh;
+    grid-template-columns: repeat(4, 23%);
+    gap: 3rem;
 }
+
+.related-club-wrapper img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.related-club {
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.related-club:hover {
+    transform: translateY(-10px);
+}
+
+
+
+
+
+
+
+
+
+.fa-house {
+    cursor: pointer;
+    transition: 0.3s color;
+}
+
+.fa-house:hover {
+    color: rgb(2, 6, 196);
+}
+
 
 
 
